Changed z-index on intro coopy, Fixes BH-1

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -68,6 +68,6 @@
 	}
 
 	&__intro {
-		z-index: 1;
+		z-index: 2;
 	}
 }
